# oh-my-skills

./: .gitignore  LICENSE  README.ko.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: LAUNCH.md  LAUNCH_KO.md  USAGE.md
docs/superpowers/plans/: 2026-05-27-dashboard-redesign.md
docs/superpowers/specs/: 2026-05-27-dashboard-redesign-design.md
skill_ledger/: __init__.py  cli.py  gui.py  manager.py  reporting.py  scanner.py
skill_ledger/web/: app.js  index.html  styles.css
tests/: test_manager.py  test_scanner.py
